--- a/src/ex10_html-css-fundamentals-part2/task-03.html
+++ b/src/ex10_html-css-fundamentals-part2/task-03.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="task-03.css" />
   </head>
   <body>
-    <table id="table-employees">
-      <tr class="table-header">
+    <table class="table-employees">
+      <tr id="table-header">
         <th>customer</th>
         <th>phone</th>
         <th>mail</th>
