--- a/src/ex8_html-css-basics/task-04.html
+++ b/src/ex8_html-css-basics/task-04.html
@@ -8,10 +8,7 @@
     <link rel="stylesheet" href="task-04.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Ephesis&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Ephesis&display=swap" rel="stylesheet" />
     <style>
       h1,
       h2,
