--- a/src/kanban/task-01.html
+++ b/src/kanban/task-01.html
@@ -30,49 +30,25 @@
         </button>
       </div>
     </header>
-    <main>
-      <div class="task">
-        <div class="task-header">
-          <h2>Backlog</h2>
-          <div class="task-settings">
-            <img src="img/dot.svg" alt="" />
-          </div>
-        </div>
-        <div class="task-content">
-          <p class="name-task">User page – performance issues</p>
-          <p class="name-task">Login page – performance issues</p>
-          <p class="name-task">User page – performance issues</p>
-          <p class="name-task">Login page – performance issues</p>
-          <p class="name-task">User page – performance issues</p>
-          <p class="name-task">Login page – performance issues</p>
-          <p class="name-task">User page – performance issues</p>
-          <p class="name-task">Login page – performance issues</p>
-          <p class="name-task">User page – performance issues</p>
-          <button class="add-card">
-            <img src="img/plus.svg" alt="" />
-            Add card
-          </button>
-        </div>
-      </div>
-    </main>
+    <main></main>
     <footer>
       <div class="info-tasks">
         <div class="active-tasks">
           Active tasks: &#60;
-          <span>M</span>
+          <span class="signature">M</span>
           &#62;
         </div>
         <div class="finished-tasks">
           Finished tasks: &#60;
-          <span>M</span>
+          <span class="signature">M</span>
           &#62;
         </div>
       </div>
       <div class="info-kanban">
         Kanban board by &#60;
-        <span>Name</span>
+        <span class="signature">Name</span>
         &#62;, &#60;
-        <span>Year</span>
+        <span class="signature">Year</span>
         &#62;
       </div>
     </footer>
