--- a/src/kanban/task-01.html
+++ b/src/kanban/task-01.html
@@ -26,7 +26,7 @@
           <div class="profile">
             <img src="img/profile.svg" class="img-button-profile" alt="" />
           </div>
-          <img src="img/arrow.svg" alt="" />
+          <img src="img/arrow_down.svg" id="img-arrow" alt="" />
         </button>
       </div>
     </header>
@@ -52,5 +52,6 @@
         &#62;
       </div>
     </footer>
+    <script src="task-02.js"></script>
   </body>
 </html>
