--- a/src/kanban/task-01.html
+++ b/src/kanban/task-01.html
@@ -30,7 +30,64 @@
         </button>
       </div>
     </header>
-    <main></main>
+    <main>
+      <div class="task" id="backlog">
+        <div class="task-header">
+          <h2>Backlog</h2>
+          <div class="task-settings">
+            <img src="img/dot.svg" alt="" />
+          </div>
+        </div>
+        <div class="task-content">
+          <button class="active" id="button-backlog">
+            <img src="img/plus.svg" alt="" />
+            Add card
+          </button>
+        </div>
+      </div>
+      <div class="task" id="ready">
+        <div class="task-header">
+          <h2>Ready</h2>
+          <div class="task-settings">
+            <img src="img/dot.svg" alt="" />
+          </div>
+        </div>
+        <div class="task-content">
+          <button class="active" id="button-ready">
+            <img src="img/plus.svg" alt="" />
+            Add card
+          </button>
+        </div>
+      </div>
+      <div class="task" id="inProgress">
+        <div class="task-header">
+          <h2>In progress</h2>
+          <div class="task-settings">
+            <img src="img/dot.svg" alt="" />
+          </div>
+        </div>
+        <div class="task-content">
+          <button class="active" id="button-inProgress">
+            <img src="img/plus.svg" alt="" />
+            Add card
+          </button>
+        </div>
+      </div>
+      <div class="task" id="finished">
+        <div class="task-header">
+          <h2>Finished</h2>
+          <div class="task-settings">
+            <img src="img/dot.svg" alt="" />
+          </div>
+        </div>
+        <div class="task-content">
+          <button class="active" id="button-finished">
+            <img src="img/plus.svg" alt="" />
+            Add card
+          </button>
+        </div>
+      </div>
+    </main>
     <footer>
       <div class="info-tasks">
         <div class="active-tasks">
@@ -52,5 +109,6 @@
         &#62;
       </div>
     </footer>
+    <script src="task-03.js"></script>
   </body>
 </html>
