--- a/src/kanban/task-01.html
+++ b/src/kanban/task-01.html
@@ -109,6 +109,7 @@
         &#62;
       </div>
     </footer>
+    <script src="function.js"></script>
     <script src="task-03.js"></script>
   </body>
 </html>
