--- a/src/kanban/src/index.html
+++ b/src/kanban/src/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kanban</title>
-    <link rel="stylesheet" href="task-01.css" />
   </head>
   <body>
     <header>
@@ -19,14 +18,14 @@
       </div>
       <div class="right-side">
         <button class="button-add">
-          <img src="img/add.svg" class="img-button-add" alt="" />
+          <img src="assets/plus.svg" class="img-button-add" alt="" />
           Create new list
         </button>
         <button class="button-profile">
           <div class="profile">
-            <img src="img/profile.svg" class="img-button-profile" alt="" />
+            <img src="assets/profile.svg" class="img-button-profile" alt="" />
           </div>
-          <img src="img/arrow_down.svg" id="img-arrow" alt="" />
+          <img src="assets/arrow_down.svg" id="img-arrow" alt="" />
         </button>
       </div>
     </header>
@@ -52,6 +51,5 @@
         &#62;
       </div>
     </footer>
-    <script src="task-02.js"></script>
   </body>
 </html>
