--- a/src/kanban/src/index.html
+++ b/src/kanban/src/index.html
@@ -29,17 +29,18 @@
         </button>
       </div>
     </header>
+    <span id="msg">Press CreateNewList for add new block</span>
     <main></main>
     <footer>
       <div class="info-tasks">
         <div class="active-tasks">
           Active tasks: &#60;
-          <span class="signature">M</span>
+          <span class="signature" id="count-first-block"></span>
           &#62;
         </div>
         <div class="finished-tasks">
           Finished tasks: &#60;
-          <span class="signature">M</span>
+          <span class="signature" id="count-last-block"></span>
           &#62;
         </div>
       </div>
